2012-11-30  Hirofumi Kosaka <kosaka@rworks.jp>

	* lib/PandoraFMS/SNMPServer.pm: Added missing safe_output()
	for trap filters. This fixed a bug that a backslash could not
	escape its following character.

2012-10-20  Sancho Lerena <slerena@artica.es>

	* pandora_database_check.pl: First attempt to create a tool
	to measure Pandora FMS performance in real time, for 
	monitoring performance of the database.
 
2012-10-23 Dario Rodriguez <dario.rodriguez@artica.es>

	* util/recon_scripts/snmpdevices.pl: Fixed an error in snmpdevices.pl
	which has a double safe_input.

2012-10-08  Sancho Lerena <slerena@artica.es>

	* util/mysql_plugin.sh: Fixed problem in composed variables.

2012-10-01  Sancho Lerena <slerena@artica.es>

	* util/pandora_manage.pl: Fixed enable eacl from CLI.
	It was calling wrong function.

2012-09-28  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/NetworkServer.pm: Merged from trunk. Disable a module
	  if a text obj tag cannot be converted to an OID.

2012-09-26  Hirofumi Kosaka <kosaka@rworks.jp>

	* util/pandora_db.pl: bug fix: 'audit_purge' was used to purge
	tagente_datos_string (instead of 'string_purge'). Also fixed
	the bug that the oldest data on the corresponding table would
	be never purged.

2012-08-20  Sergio Martin <sergio.martin@artica.es>

	* util/plugin/EU_10yrspread.pl: added plugin to monitor 
	several european countries spread to 10 years

2012-07-27  KIKUCHI Koichiro <koichiro@rworks.jp>

	* lib/PandoraFMS/SNMPServer.pm: Added SNMPv2 support.

	Merged from trunk r5489.

2012-07-27  KIKUCHI Koichiro <koichiro@rworks.jp>

	* lib/PandoraFMS/Core.pm: fixed bug: added missing decode_entities for
	 SNMP alert evaluation. Also cleaned source code style.

	Merged from trunk r6818.

2012-07-17 Dario Rodriguez <dario.rodriguez@artica.es>

	* lib/PandoraFMS/Core.pm: Backport of bugfix in group statistic
	sql queries from trunk.

2012-06-25 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
