@@ -1,3 +1,11 @@
+2012-12-10  Sancho Lerena <slerena@artica.es>
+
+	* lib/PandoraFMS/Tools.pm: Decode output in all logfile output.
+
+	* lib/PandoraFMS/Core.pm: Reformatted logentry for gis update.
+
+	* lib/PandoraFMS/Config.pm: Updated version (4.0.3)
+
 2012-11-30  Hirofumi Kosaka <kosaka@rworks.jp>
 
 	* lib/PandoraFMS/SNMPServer.pm: Added missing safe_output()
